css/style.css
.navbar{
    text-align: center;
    background-color: rgb(179, 170, 170);
    padding: 10px;
}

a:hover{
    color: blue;
    text-decoration: underline;
    font-weight: bold;
}



.nav-link{
    margin: 40px;
    font-size: 20px;
    color: black;
    text-decoration: none;
    font: sans-serif;
    font-size: 25px;
}

.nav-button{
    margin: 40px;
    font-size: 20px;
    color: black;
    border: 1px solid black;
    border-radius: 12px;
    padding: 5px 10px;
    text-decoration: none;
    font: sans-serif;
    font-size: 25px;
    cursor: pointer;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(5, 1fr);
  background-color: #8d9397;

}

.grid-table {
  width: 100%;
  height: 100%;
  border-collapse: collapse;
  margin-top: 100px;
  margin-left: 500px;
  margin-right: 500px;

}

.grid-item {
  background-color: rgb(176, 166, 166);
  border: 1px solid black;
  border-spacing: 30px;
  padding: 20px;
  font-size: 30px;
  text-align: center;
}

.outter-box {
  margin: 200px;
  border: 20px solid rgb(55, 67, 212);
  border-radius: 20px;
}

.inner-box {
  background-color: rgb(87, 81, 207);
  border: 20px solid rbg(55, 67, 212);
  border-radius: 20px;
  padding: 20px;
  font-size: 30px;
  text-align: center;
}

